--- a/themes/zeno-themes.yaml
+++ b/themes/zeno-themes.yaml
@@ -52,8 +52,8 @@ Zeno Dark Rose:
   divider-color: "#373737" #divider-color: "rgba(55, 55, 61, 0)" #divider-color: "#37373D"
   disabled-color: "#666666"
   #border-color: "transparent"
-  ha-card-border-color: none #Cantonades de les targetes
-  ha-card-border-width: 0px
+  #ha-card-border-color: none #Cantonades de les targetes
+  #ha-card-border-width: 0px
   # Text colors
   primary-text-color: "#e5e5e5"
   secondary-text-color: var(--disabled-color)
@@ -148,10 +148,6 @@ Zeno Dark Rose:
   mdc-select-idle-line-color: var(--primary-text-color)
   mdc-select-dropdown-icon-color: var(--secondary-text-color)
   mdc-select-hover-line-color: var(--primary-color)
-  # custom:canvas-gauge-card
-  box-shadow: "transparent"
-  canvas-gauge-card-box-shadow: "transparent"
-  canvas-gauge-card-border-radius: var(--ha-card-border-radius)
 
 
 
