--- a/themes/zeno-themes.yaml
+++ b/themes/zeno-themes.yaml
@@ -53,7 +53,7 @@ Zeno Dark Rose:
   disabled-color: "#666666"
   #border-color: "transparent"
   #ha-card-border-color: none #Cantonades de les targetes
-  #ha-card-border-width: 0px
+  ha-card-border-width: 0px
   # Text colors
   primary-text-color: "#e5e5e5"
   secondary-text-color: var(--disabled-color)
